--- a/action.yml
+++ b/action.yml
@@ -46,5 +46,5 @@ runs:
       shell: bash 
     - run: sudo chmod +x ${{ github.action_path }}/test.sh
       shell: bash 
-    - run: ${{ github.action_path }}/test.sh '85205402' '79973826' 'https://endtest.io/api.php?action=runTestSuite&appId=85205402&appCode=79973826&testSuite=106877&selectedPlatform=windows&selectedOs=a&selectedBrowser=chrome&selectedResolution=d&selectedLocation=sanfrancisco&selectedCases=491130&writtenAdditionalNotes=' 6
+    - run: ${{ github.action_path }}/test.sh ${{ inputs.app-id }} ${{ inputs.app-code }} ${{ inputs.api-request }} ${{ inputs.number-of-loops }}
       shell: bash
