--- a/action.yml
+++ b/action.yml
@@ -48,10 +48,7 @@ runs:
       shell: bash 
     - run: echo ::set-output name=test_suite_name::sample
       shell: bash 
-    #- run: ${{ github.action_path }}/test.sh ${{ inputs.app_id }} ${{ inputs.app_code }} "${{ inputs.api_request }}" ${{ inputs.number_of_loops }} 
-      #shell: bash
-    - run: |
-        output=${{ github.action_path }}/test.sh ${{ inputs.app_id }} ${{ inputs.app_code }} "${{ inputs.api_request }}" ${{ inputs.number_of_loops }} 
-        echo $output
+    - run: output=${{ github.action_path }}/test.sh ${{ inputs.app_id }} ${{ inputs.app_code }} "${{ inputs.api_request }}" ${{ inputs.number_of_loops }} 
+      shell: bash
+    - run: echo $output
       shell: bash 
-   
