--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,7 @@ inputs:
 outputs:
   test_suite_name:
     description: "The name of the test suite"
+    value: ${{ steps.endtest_functional_tests.outputs.test_suite_name }}
   configuration:
     description: "The configuration of the machine or mobile device on which the test was executed"
   test_cases:
@@ -46,5 +47,6 @@ runs:
       shell: bash 
     - run: sudo chmod +x ${{ github.action_path }}/test.sh
       shell: bash 
-    - run: ${{ github.action_path }}/test.sh ${{ inputs.app_id }} ${{ inputs.app_code }} "${{ inputs.api_request }}" ${{ inputs.number_of_loops }} 
+    - id: endtest_functional_tests
+      run: ${{ github.action_path }}/test.sh ${{ inputs.app_id }} ${{ inputs.app_code }} "${{ inputs.api_request }}" ${{ inputs.number_of_loops }} 
       shell: bash
